--- a/anime_dwnld.ipynb
+++ b/anime_dwnld.ipynb
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "browoser = selenium.webdriver.Firefox()"
+    "browoser = selenium.webdriver.PhantomJS()"
    ]
   },
   {
